<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".OutComes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grading_background_blue"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:padding="20dp"
                android:text="@string/change_username"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/current_username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_username"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/current_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_background"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:enabled="false" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/new_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_username_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_background"
                        android:inputType="text"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grading_background_blue"
            android:baselineAligned="true"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="NotSibling">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/home_btn"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/income_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/bottom_btn1"
                    />

                <ImageButton
                    android:id="@+id/income_btn"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="86dp"
                    android:background="@drawable/button_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/expences_btn_outcome"
                    app:layout_constraintStart_toEndOf="@+id/home_btn"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/btn1"
                    />

                <ImageButton
                    android:id="@+id/history_btn"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="43dp"
                    android:background="@drawable/button_background"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/btn3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/expences_btn_outcome"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/expences_btn_outcome"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="58dp"
                    android:background="@drawable/button_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/history_btn"
                    app:layout_constraintStart_toEndOf="@+id/income_btn"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/expense"
                    android:contentDescription="@string/expences"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
